name:                hs-asap
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hs-asap#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hs-asap
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:        -O2 -threaded -rtsopts
  build-depends:       base >= 4.7 && < 5
                     , accelerate-llvm-ptx
                     , accelerate
                     , statistics
                     , vector
                     , cassava
                     , bytestring